debian/{control,compat}: Switch to DH compat notation and bump to DH compat level version 13.

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: kms-cmake-utils
 Priority: optional
 Maintainer: Kurento <kurento@googlegroups.com>
-Build-Depends: debhelper (>= 9),
+Build-Depends: debhelper-compat (=13),
  cmake
 Standards-Version: 4.0.0
 Vcs-Git: https://github.com/Kurento/kms-cmake-utils.git
