--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ Build-Depends:
  cmake,
  debhelper-compat (= 13),
 Standards-Version: 4.5.1
+Rules-Requires-Root: no
 Vcs-Git: https://github.com/Kurento/kms-cmake-utils.git
 Vcs-Browser: https://github.com/Kurento/kms-cmake-utils
 Homepage: https://kurento.openvidu.io/
