Reword package short description
Fixes: lintian: description-is-pkg-name
See-also: https://lintian.debian.org/tags/description-is-pkg-name

--- a/debian/control
+++ b/debian/control
@@ -22,5 +22,5 @@ Recommends:
  git,
 Suggests:
  valgrind,
-Description: Kurento CMake utils
+Description: CMake utilities used when building Kurento
  This package contains custom CMake modules, required to build Kurento.
